--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "@apollo/server": "^4.3.0",
     "@graphql-tools/load": "^7.8.8",
     "@graphql-tools/schema": "^9.0.12",
+    "@types/cors": "^2.8.13",
+    "@types/lodash": "^4.14.195",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.2",
+    "mongoose-sequence": "^5.3.1",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
-  }
+  },
+  "packageManager": "yarn@3.6.0"
 }
