--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mongoose": "^6.8.2",
     "mongoose-sequence": "^5.3.1",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
   },
   "packageManager": "yarn@3.6.0"
 }
